cmake_minimum_required(VERSION 3.0)
project(bomberman)
set(SRCS src/main.cpp src/map.cpp src/getMapCoor.cpp src/player.cpp src/bomb.cpp src/menu.cpp src/Ia.cpp src/Bonus.cpp)
find_library(IRRLICHT Irrlicht ./irrlicht-1.8.4/lib/Linux/)
find_library(SFML sfml-audio -L./SFML-2.5.1/SFML-2.5.1/lib/)
add_executable(bomberman ${SRCS})
include_directories(./include)
include_directories(./src)
target_link_libraries(bomberman Irrlicht)
target_link_libraries(bomberman sfml-audio)
